# cob_gazebo_plugins

./: .travis.yml  README.md
cob_gazebo_plugins/: CHANGELOG.rst  CMakeLists.txt  cob_gazebo_plugins.xml  package.xml
cob_gazebo_plugins/include/cob_gazebo_plugins/: gazebo_ros_mimic_joint.h
cob_gazebo_plugins/src/: gazebo_ros_mimic_joint.cpp
cob_gazebo_ros_control/: CHANGELOG.rst  CMakeLists.txt  README.md  cob_gazebo_ros_control_plugins.xml  package.xml
cob_gazebo_ros_control/include/cob_gazebo_ros_control/: hwi_switch_gazebo_ros_control_plugin.h  hwi_switch_robot_hw_sim.h  multi_hw_interface_gazebo_ros_control_plugin.h  multi_hw_interface_robot_hw_sim.h
cob_gazebo_ros_control/src/: hwi_switch_gazebo_ros_control_plugin.cpp  hwi_switch_robot_hw_sim.cpp  multi_hw_interface_gazebo_ros_control_plugin.cpp  multi_hw_interface_robot_hw_sim.cpp
