<package format="2">
  <name>cob_gazebo_plugins</name>
  <version>0.6.2</version>
  <description>cob_gazebo_plugins meta-package</description>

  <license>LGPL</license>

  <url type="website">http://ros.org/wiki/cob_gazebo_plugins</url>
  <!-- <url type="bugtracker"></url> -->

  <maintainer email="fmw@ipa.fhg.de">Florian Weisshardt</maintainer>
  <maintainer email="nhg@ipa.fhg.de">Nadia Hammoudeh Garcia</maintainer>
  <maintainer email="fxm@ipa.fhg.de">Felix Messmer</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>cob_gazebo_ros_control</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
