<package>
  <name>cob_gazebo_ros_control</name>
  <version>0.6.0</version>
  <description>
    This package contains a specialization of the gazebo_ros_control plugin.
    The cob_gazebo_ros_control plugin allows Multi-HardwareInterface-Support.
  </description>

  <maintainer email="fxm@ipa.fhg.de">Felix Messmer</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/cob_gazebo_ros_control</url>
  <url type="bugtracker">https://github.com/ipa320/cob_gazebo_plugins/issues</url>
  <url type="repository">https://github.com/ipa320/cob_gazebo_plugins</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend> 
  <build_depend>gazebo</build_depend>
  <build_depend>control_toolbox</build_depend> 
  <build_depend>controller_manager</build_depend> 
  <build_depend>pluginlib</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>transmission_interface</build_depend> 
  <build_depend>joint_limits_interface</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>angles</build_depend>
  <build_depend>gazebo_ros_control</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>gazebo</run_depend>
  <run_depend>gazebo_ros</run_depend> 
  <run_depend>control_toolbox</run_depend> 
  <run_depend>controller_manager</run_depend> 
  <run_depend>pluginlib</run_depend> 
  <run_depend>transmission_interface</run_depend> 
  <run_depend>urdf</run_depend>
  <run_depend>angles</run_depend>
  <run_depend>gazebo_ros_control</run_depend>

  <export>
    <gazebo_ros_control plugin="${prefix}/cob_gazebo_ros_control_plugins.xml"/>
  </export>
</package>
